# ai-stock-bestie

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  mypy.ini  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md
src/: __init__.py  app.py  charts.py  config.py  constants.py  data_fetcher.py  database.py  historical_fetcher.py  indicators.py  investment_llm.py  investment_ui.py  llm_insights.py  long_term_indicators.py  types.py  ui_components.py
tests/: __init__.py  test_formatters.py  test_validators.py
utils/: __init__.py  formatters.py  logger.py  validators.py
